--- a/.github/workflows/sftp-deploy.yml
+++ b/.github/workflows/sftp-deploy.yml
@@ -26,11 +26,10 @@ jobs:
         run: npm run build
       
       - name: Deploy to SFTP
-        uses: appleboy/scp-action@v0.1.7
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          host: ${{ secrets.SFTP_SERVER }}
+          server: ${{ secrets.SFTP_SERVER }}
           username: ${{ secrets.SFTP_USERNAME }}
           password: ${{ secrets.SFTP_PASSWORD }}
-          source: "./dist/*"
-          target: ${{ secrets.SFTP_REMOTE_PATH }}
-          strip_components: 0
+          server-dir: ${{ secrets.SFTP_REMOTE_PATH }}
+          local-dir: ./dist/
